--- a/help.html
+++ b/help.html
@@ -7,6 +7,7 @@
 	<script type="test/javascript" src="js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/help.css" />
+	<link rel="stylesheet" href="css/basic.css" />
 </head>
 <body>
 	<div class="navbar navbar-fixed-top">
