--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	  <div class="container">
 
-      <form class="form-signin" method="post" enctype="multipart/form-data" action='backstage/loginUser.php'>
+      <form class="form-signin" method="post" enctype="multipart/form-data" action='server/php/loginUser.php'>
         <h2 class="form-signin-heading">Please sign in</h2>
         <input class="input-block-level" placeholder="User Name" type="text">
         <input class="input-block-level" placeholder="Password" type="password">
