--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Register</title>
 		<script type="text/javascript" src="js/jquery.js"></script>
-		<script type="text/javascript" src="register.js"></script>
+		<script type="text/javascript" src="js/register.js"></script>
 		<link href="css/register.css" rel="stylesheet" type="text/css">
 		<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 		<meta charset="utf-8">
@@ -11,27 +11,26 @@
 
 	<body>
 		<div id='registerBlock'>
-			<h3>Register for a new account.</h3>
-
-				<div class="container">
-					<div class="span6">
-						<p class="span2">User name: </p>
-						<input type='text' name='userName' id='userName' maxlength='20' class="span4"/>
-					</div>
-					<div class="span6">
-						<p class="span2">Password: </p>
-						<input type='password' name='userPwd' id='userPwd' maxlength='20'  class="span4"/>
-					</div>
-					<div class="span6">
-				 		<p class="span2">Password Again:</p> 
-						<input type='password' name='rePwd' id='rePwd' maxlength='20'  class="span4"/>
-					</div>
-					<div class="span6">
-						<button id="regBtn" class="btn primary">注册</button>
-						<a href="index.html" class="btn primary">登录</a>
-					</div>
+			<h3>Register for a new account</h3>
+			<div class="container">
+				<div class="span6">
+					<p class="span2">User name: </p>
+					<input type='text' name='userName' id='userName' maxlength='20' class="span3"/>
 				</div>
-				<div id="result"></div>
+				<div class="span6">
+					<p class="span2">Password: </p>
+					<input type='password' name='userPwd' id='userPwd' maxlength='20'  class="span3"/>
+				</div>
+				<div class="span6">
+					<p class="span2">Password Again:</p> 
+					<input type='password' name='rePwd' id='rePwd' maxlength='20'  class="span3"/>
+				</div>
+				<div class="span6">
+					<button id="regBtn" class="btn primary">注册</button>
+					<a href="index.html" class="btn primary">登录</a>
+				</div>
+			</div>
+			<div id="result"></div>
 		</div>
 	</body>
 
